# diamonds

./: .gitignore  .gitmodules  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_GUIDELINES.md  CONTRIBUTION_GUILDELINES.md  README.md  funding.json  index.js  package-lock.json  package.json
v2/: .gitignore  Cargo.toml
v2/src/: banner.rs  main.rs  prompt.rs  scaffold.rs
v2/src/convert/: codegen.rs  mod.rs  parser.rs
v2/templates/ERC20/foundry/: README.md
v2/templates/ERC20/foundry/contracts/facets/: ERC20Facet.sol
v2/templates/ERC20/foundry/test/: deployDiamond.t.sol
v2/templates/ERC20/hardhat/javascript/: README.md  package-lock.json
v2/templates/ERC20/hardhat/javascript/scripts/: deploy.js
v2/templates/ERC20/hardhat/javascript/test/: ERC20Facet.test.js
v2/templates/ERC20/hardhat/typescript/: README.md  package.json
v2/templates/ERC20/hardhat/typescript/contracts/: Diamond.sol
v2/templates/ERC20/hardhat/typescript/scripts/: deploy.ts
v2/templates/ERC20/hardhat/typescript/test/: ERC20Facet.test.ts
v2/templates/ERC721/foundry/contracts/: Diamond.sol
v2/templates/ERC721/foundry/test/: deployDiamond.t.sol
v2/templates/ERC721/foundry/test/helpers/: DiamondUtils.sol
v2/templates/ERC721/hardhat/javascript/: README.md  package.json
v2/templates/ERC721/hardhat/javascript/scripts/: deploy.js
v2/templates/ERC721/hardhat/typescript/: README.md  package.json
v2/templates/default/foundry/test/: deployDiamond.t.sol
v2/templates/default/hardhat/javascript/: README.md  package.json
v2/templates/default/hardhat/typescript/: README.md
(+94 files in other folders)
